Oct 28/2016 : v0.5 released
  - fix : colors were reset when editing a tag
  - new : added ticks on graph every second (or 5 or 10 seconds for slow speeds)
  - fix : freq counter

Oct 25/2016 : v0.4 released
  - fix : DAQmx counter and digital inputs fixed

Oct 24/2016 : v0.3 released
  - new : added support for National Instruments DAQmx systems

Oct 18/2016 : v0.2 released
  - fix : s7 tags were limited to block number 127

Oct 7/2016 : v0.1 released
  - init public release