@@ -5,7 +5,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="home" value="."/>
-  <property name="version" value="12.4.0"/>
+  <property name="version" value="12.5.0"/>
   <property name="noelf" value="true"/>
 
   <property name="ubuntu.depends" value="openjdk-8-jre, libjsch-java, libjzlib-java, libjcifs-java, fuse, libfuse2, fuseiso, libcdio13, mate-icon-theme, libv4l-dev"/>
