@@ -1,3 +1,7 @@
+Nov 22/2016 : v0.6 released
+  - fix : changed image background to white for printing
+  - fix : grouping siemens tags
+
 Oct 28/2016 : v0.5 released
   - fix : colors were reset when editing a tag
   - new : added ticks on graph every second (or 5 or 10 seconds for slow speeds)
